Estilos generales y componente header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,24 @@
-<p>header works!</p>
+ <!-- Header & Navbar Section -->
+ <header>
+    <nav>
+        <div class="nav_logo">
+            <a href="#">
+                <img src="assets/images/coffee_logo.png" alt="Coffee Logo" />
+                <h2>Coffee</h2>
+            </a>
+        </div>
+        <input type="checkbox" id="click" />
+        <label for="click">
+            <i class="menu_btn bx bx-menu"></i>
+            <i class="close_btn bx bx-x"></i>
+        </label>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#service">Services</a></li>
+            <li><a href="#why">Why Us</a></li>
+            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+</header>
