Sección header con estilos css y estructura html

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-/*Configuración tailwind CSS*/
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
+/*Importamos fuente de google font*/
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
 /*Estilos generales de toda la web*/
 * {
@@ -16,8 +13,8 @@
 /*Variables CSS*/
 :root {
     /* Colores */
-    --primary-color: #3b141c;
-    --secondary-color: #f3961c;
+    --primary-color: #b63913;
+    --secondary-color: #FFEEAD;
     --dark-color: #252525;
     --white-color: #fff;
     --light-gray-color: #f2f2f2;
@@ -37,3 +34,37 @@ html {
 body {
     background-color: var(--white-color);
 }
+
+/* Setting for the whole website */
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+}
+
+.section_container {
+    margin: 0 auto;
+    max-width: var(--site-max-width);
+}
+
+.section_title {
+    text-align: center;
+    padding: 60px 0 100px;
+    font-size: 32px;
+    font-family: "Righteous", sans-serif;
+    text-transform: uppercase;
+}
+
+.section_title::after {
+    content: '';
+    width: 80px;
+    background: var(--secondary-color);
+    height: 5px;
+    display: block;
+    margin: 7px auto 0;
+    border-radius: 8px;
+}
+
+
