Iniciando componente about

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
     <nav>
         <div class="nav_logo">
             <a href="#">
-                <img src="../../../assets/images/logo-header/logo.png" alt="Coffee Logo" />
+                <img src="../../../assets/images/logo-header/logo.png" alt="Guitar Logo" />
                 <h2>Guitar Shop</h2>
             </a>
         </div>
@@ -13,11 +13,10 @@
         </label>
         <ul>
             <li><a href="#" onclick="document.getElementById('click').checked = false;">Home</a></li>
-            <li><a href="#about" onclick="document.getElementById('click').checked = false;">About</a></li>
-            <li><a href="#service" onclick="document.getElementById('click').checked = false;">Services</a></li>
-            <li><a href="#why" onclick="document.getElementById('click').checked = false;">Why Us</a></li>
-            <li><a href="#gallery" onclick="document.getElementById('click').checked = false;">Gallery</a></li>
-            <li><a href="#contact" onclick="document.getElementById('click').checked = false;">Contact</a></li>
+            <li><a href="#about" onclick="document.getElementById('click').checked = false;">Acerca de</a></li>
+            <li><a href="#service" onclick="document.getElementById('click').checked = false;">Servicios</a></li>            
+            <li><a href="#gallery" onclick="document.getElementById('click').checked = false;">Stock</a></li>
+            <li><a href="#contact" onclick="document.getElementById('click').checked = false;">Contacto</a></li>
         </ul>
     </nav>
 </header>
