Sección about añadida | HTML | CSS | Favicon añadido

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,19 @@
-<p>about works!</p>
+<section class="about_us" id="about">
+    <div class="section_container">
+        <div class="about_container">
+            <div class="text_section">
+                <h2 class="section_title">Acerca de Nosotros</h2>
+                <p>
+                    En Guitarra House, ubicada en San Rafael, Argentina, somos uno de los lugares favoritos para los
+                    amantes de la música y las guitarras. Nuestro objetivo es ofrecer la mejor experiencia a nuestros
+                    clientes, asegurando un entorno cálido, amigable y relajado para disfrutar de la música. Queremos
+                    traer un sentido de relajación a la ciudad con nuestro espacio acogedor, completo con cómodos
+                    sillones donde puedes relajarte mientras tocas o aprendes sobre guitarras.
+                </p>
+            </div>
+            <div class="image_section">
+                <img src="../../../assets/images/about/about.png" alt="guitarra" />
+            </div>
+        </div>
+    </div>
+</section>
