--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -13,7 +13,7 @@
                 </div>
             </div>
             <div class="image_section">
-                <img src="../../../assets/images/banner/guitar.png" alt="Guitarra" class="glowing-border" />
+                <img src="../../../assets/images/banner/guitar.png" alt="Guitarra"/>
             </div>
         </div>
     </div>
