Services section con HTML

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,7 +4,7 @@
             <div class="text_section">
                 <h2 class="section_title">Acerca de Nosotros</h2>
                 <p>
-                    En Guitarra House, ubicada en San Rafael, Argentina, somos uno de los lugares favoritos para los
+                    En Guitarra House, ubicada en la Antartida, somos uno de los lugares favoritos para los
                     amantes de la música y las guitarras. Nuestro objetivo es ofrecer la mejor experiencia a nuestros
                     clientes, asegurando un entorno cálido, amigable y relajado para disfrutar de la música. Queremos
                     traer un sentido de relajación a la ciudad con nuestro espacio acogedor, completo con cómodos
