--- a/src/app/components/services-section/services-section.component.html
+++ b/src/app/components/services-section/services-section.component.html
@@ -1,56 +1,58 @@
 <section class="services" id="service">
-    <h2 class="section_title">Our Services</h2>
+    <h2 class="section_title">Nuestros Servicios</h2>
     <div class="section_container">
         <div class="service_container">
-            <div class="services_items">
-                <img src="assets/images/hot_beverages.png" alt="Hot Beverages" />
+            <div class="services_card">
+                <img src="../../../assets/images/services/venta-guitarras.jpg" alt="Venta de Guitarras" />
                 <div class="services_text">
-                    <h3>Hot Beverages</h3>
+                    <h3>Venta de Guitarras</h3>
                     <p>
-                        Wide range of Steaming hot coffees to make you fresh and light.
+                        Amplia gama de guitarras para todos los niveles, desde principiantes hasta profesionales.
                     </p>
                 </div>
             </div>
-            <div class="services_items">
-                <img src="assets/images/cold_beverages.png" alt="Cold Beverages" />
+            <div class="services_card">
+                <img src="../../../assets/images/services/venta-guitarras.jpg" alt="Clases de Guitarra" />
                 <div class="services_text">
-                    <h3>Cold Beverages</h3>
+                    <h3>Clases de Guitarra</h3>
                     <p>
-                        Creamy and frothy cold coffee to make you feel cool from inside.
+                        Clases personalizadas para mejorar tus habilidades y aprender nuevas técnicas.
                     </p>
                 </div>
             </div>
-            <div class="services_items">
-                <img src="assets/images/refreshment.png" alt="Refreshment" />
+            <div class="services_card">
+                <img src="../../../assets/images/services/venta-guitarras.jpg" alt="Reparación de Guitarras" />
                 <div class="services_text">
-                    <h3>Refreshment</h3>
-                    <p>Fruit and icy refreshing drink to make you feel good.</p>
-                </div>
-            </div>
-            <div class="services_items">
-                <img src="assets/images/special_combos.png" alt="Special Combos" />
-                <div class="services_text">
-                    <h3>Special Combos</h3>
+                    <h3>Reparación de Guitarras</h3>
                     <p>
-                        Now it's really easy to chose your favourite eating and drinking
-                        combinations.
+                        Servicios de reparación y mantenimiento para mantener tu guitarra en perfectas condiciones.
                     </p>
                 </div>
             </div>
-            <div class="services_items">
-                <img src="assets/images/burger_frenchFries.png" alt="Burger & French Fries" />
+            <div class="services_card">
+                <img src="../../../assets/images/services/venta-guitarras.jpg" alt="Accesorios para Guitarra" />
                 <div class="services_text">
-                    <h3>Burger & French Fries</h3>
-                    <p>Yummy! Quick bites to satisfy your small size hunger.</p>
+                    <h3>Accesorios para Guitarra</h3>
+                    <p>
+                        Todo tipo de accesorios, desde cuerdas hasta afinadores, para complementar tu instrumento.
+                    </p>
                 </div>
             </div>
-            <div class="services_items">
-                <img src="assets/images/dessert.png" alt="Desserts" />
+            <div class="services_card">
+                <img src="../../../assets/images/services/venta-guitarras.jpg" alt="Alquiler de Guitarras" />
                 <div class="services_text">
-                    <h3>Desserts</h3>
+                    <h3>Alquiler de Guitarras</h3>
                     <p>
-                        This for sure would satiate your palate and take you on a
-                        culinary treat.
+                        Servicio de alquiler de guitarras para eventos y prácticas.
+                    </p>
+                </div>
+            </div>
+            <div class="services_card">
+                <img src="../../../assets/images/services/venta-guitarras.jpg" alt="Eventos y Conciertos" />
+                <div class="services_text">
+                    <h3>Eventos y Conciertos</h3>
+                    <p>
+                        Organización de eventos y conciertos para guitarristas y bandas.
                     </p>
                 </div>
             </div>
