Sección contacto y footer añadidos | HTML | CSS

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header id="home">
     <nav>
         <div class="nav_logo">
             <a href="#">
@@ -15,7 +15,7 @@
             <li><a href="#" onclick="document.getElementById('click').checked = false;">Home</a></li>
             <li><a href="#about" onclick="document.getElementById('click').checked = false;">Acerca de</a></li>
             <li><a href="#service" onclick="document.getElementById('click').checked = false;">Servicios</a></li>            
-            <li><a href="#gallery" onclick="document.getElementById('click').checked = false;">Stock</a></li>
+            <li><a href="#stock" onclick="document.getElementById('click').checked = false;">Stock</a></li>
             <li><a href="#contact" onclick="document.getElementById('click').checked = false;">Contacto</a></li>
         </ul>
     </nav>
