--- a/src/app/components/stock/stock.component.html
+++ b/src/app/components/stock/stock.component.html
@@ -1,4 +1,4 @@
-<section class="gallery" id="gallery">
+<section class="gallery" id="stock">
     <h2 class="section_title">Stock</h2>
     <div class="section_container">
         <div class="gallery_container">
