--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,3 +3,5 @@
 <app-about></app-about>
 <app-services-section></app-services-section>
 <app-stock></app-stock>
+<app-contact></app-contact>
+<app-footer></app-footer>
